2004-08-21  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs/urar.in: Fix non-POSIX constructs.

	From Koblinger Egmont <egmont uhulinux hu>

2004-08-21  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs/rpm: Modified workaround for spaces and single quotes 
	in the path name.

	Based on patch from Jakub Jelinek  <jakub@redhat.com>

2004-08-21  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs/rpm: Don't show cpio contents in main rpm view.
	Also avoids copying files from main view instead of from 
	inside CONTENTS.cpio. The former is painfully slow as the whole 
	file is rpm2cpio'd on each copy.

	From Jakub Jelinek  <jakub@redhat.com>

2004-08-21  Pavel S. Shirshov  <pavelsh@mail.ru>

	* samba/lib/util.c (tmpdir): Use MC_TMPDIR environment variable.
	(automount_lookup): More secure code.

2004-08-19  Roland Illig  <roland.illig@gmx.de>

	* extfs/deb.in (mcdebfs_list): Separated the use of quoted and
	unquoted variables. (mcdebfs_copyout): likewise.
	(mcdebfs_run): likewise.
	
	From Leonard den Ottolander <leonard *den.ottolander.nl>

2004-08-19  Roland Illig  <roland.illig@gmx.de>

	* extfs/deba.in (list): Separated the use of quoted and unquoted
	variables. (copyout): likewise. (run): likewise.
	
	From Leonard den Ottolander <leonard *den.ottolander.nl>

2004-08-19  Roland Illig  <roland.illig@gmx.de>

	* extfs/deba.in (bt): deleted. (ft): deleted. (fm): deleted.
	(ls): deleted. (list): correctly quoted shell command arguments.
	(copyout): likewise. (run): likewise.
	
	From Leonard den Ottolander <leonard *den.ottolander.nl>

2004-08-19  Roland Illig  <roland.illig@gmx.de>

	* smbfs.c: Modified smbfs_convert_path based on a patch sent by
	Andrew V. Samoilov. Adjusted the calls to smbfs_convert_path.
	Simplified string handling by using free_after from src/util.h.
	Fixed one memory leak and one accidental modification.

2004-08-18  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs/rpm: Command line parameters fix for UPGRADE.