@@ -1,3 +1,10 @@
+2004-08-24  Roland Illig  <roland.illig@gmx.de>
+
+	* extfs.c (extfs_internal_stat): Fixed memory leaks introduced
+	by my change from 2004-08-16. (extfs_unlink): likewise.
+
+	* ftpfs.c (ftpfs_send_command): likewise.
+
 2004-08-21  Pavel S. Shirshov  <pavelsh@mail.ru>
 
 	* extfs/urar.in: Fix non-POSIX constructs.
